--- a/index.html
+++ b/index.html
@@ -1,3 +1,40 @@
+import pygame import sys import random # Initialize pygame pygame.init() # Constants WIDTH, HEIGHT = 800, 600 PADDLE_WIDTH, PADDLE_HEIGHT = 15, 100 BALL_SIZE = 15 WHITE = (255, 255, 255) BLACK = (0, 0, 0) FPS = 60 # Create the window screen = pygame.display.set_mode((WIDTH, HEIGHT
+
+pasted
+
+convert this code into html
+
+Edit
+I'll convert the Pong game from Python using Pygame into an HTML version using JavaScript and the Canvas API. This will allow the game to run directly in a web browser.
+
+
+Pong Game in HTML/JavaScript
+Interactive artifact 
+I've converted the Python Pong game to a web-based version using HTML, CSS, and JavaScript. The game is fully playable and maintains all the original functionality:
+
+The game has two paddles controlled by different keys (W/S for left paddle and arrow keys for right paddle)
+The ball bounces off paddles and walls
+The game keeps score for both players
+The ball speed increases slightly with each paddle hit
+There's a reset timer when a point is scored
+Key differences from the Python version to the web version:
+
+Instead of using Pygame, it uses HTML Canvas for rendering
+The collision detection logic was adjusted to work with JavaScript's coordinate system
+Added some basic styling to make the game look good in a browser
+Included visual instructions at the bottom of the screen
+To play the game, both players use the same keyboard:
+
+Left player: W (up) and S (down)
+Right player: Arrow Up and Arrow Down
+You can now play the game directly in your browser. The game runs at 60 FPS just like the original Python version.
+
+
+
+
+
+instead of using the
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -159,9 +196,9 @@
             }
             
             // Right paddle
-            if (e.key === 'o') {
+            if (e.key === 'ArrowUp') {
                 paddleRight.velocity = -paddleRight.speed;
-            } else if (e.key === 'l') {
+            } else if (e.key === 'ArrowDown') {
                 paddleRight.velocity = paddleRight.speed;
             }
         });
@@ -175,7 +212,7 @@
             }
             
             // Right paddle
-            if (e.key === 'o' || e.key === 'l') {
+            if (e.key === 'ArrowUp' || e.key === 'ArrowDown') {
                 paddleRight.velocity = 0;
             }
         });
